# tuxsaver

./: .gitattributes  AUTHORS  CONTRIBUTING.md  Doxyfile  Makefile.in  ProjectHome.md  README  README.md  TODO  aclocal.m4  configure  configure.in  configure.in.in  libtool  tuxsaver.kdevelop  tuxsaver.kdevelop.pcs  tuxsaver.kdevses  tuxsaver.lsm  tuxsaver.spec
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
doc/en/storyhowto/: Makefile.am  Makefile.in  commandolist.html  storyhowto.html
po/: Makefile.in  fr.gmo  fr.po  nl.gmo  nl.po  tuxsaver.pot
src/: EventClient.cpp  EventClient.hpp  EventServer.cpp  EventServer.hpp  Follow.cpp  Follow.hpp  Jump.cpp  Jump.hpp  Makefile.am  Makefile.in  Move.cpp  Move.hpp  Openmouth.cpp  Openmouth.hpp  Visible.cpp  Visible.hpp  Walk.cpp  Walk.hpp  ac3d.h  ac3dloader.cpp  ac3dloader.h  ac3dtexture.cpp  ac3dtexture.h  arm.cpp  arm.hpp  body.cpp  body.hpp  camera.cpp  camera.hpp  fishingline.cpp  fishingline.hpp  hat.cpp  hat.hpp  init.cpp  init.hpp  island.cpp  island.hpp  leftfoot.cpp  leftfoot.hpp  loadableobject.cpp  (+33 more)
src/objects/: Makefile.am  Makefile.in  alienshuttle.ac  axe.ac  beachball.ac  box.ac  elogo.ac  fish.ac  fishingline.ac  greenbeam.ac  kdlogo.ac  sign.ac  speedboat.ac  submarine.ac  titanic3.ac
src/objects/hats/: Makefile.am  Makefile.in  basketbalhat.ac  blackhat.ac  christmashat.ac  funnyhat.ac  knight.ac  redandyellowhat.ac  redandyellowhat2.ac  redhat.ac  spike.ac  vikinghat.ac
src/objects/islands/: Makefile.am  Makefile.in  iceberg.ac  iceberg_with_iglo.ac  tropical_island.ac
src/pics/: Makefile.am  Makefile.in
src/soundfiles/: Makefile.am  Makefile.in
src/stories/: Makefile.am  Makefile.in  alienshuttle  beachball  dance  dive  fish  glideinsea  gliding  jump  kangeroe  kdelogo  matrix  round  salto  showsign  siting  sitingonside  speedboat  storylist  submarine  sunny  swim  titanic  walkandjump  wave
